--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             </div>
 
             <div class="card-footer">
-                <button id="generate" class="btn" onclick="btnGen()">Generate Password</button>
+                <button id="generate" class="btn">Generate Password</button>
             </div>
 
         </div>
